# Line-calculator-with-graph-output-in-CPP-Qt

./: .gitignore  CMakeLists.txt  README.md  main.cc
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  SmartCalc_v2_0  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-61d344adc373086c2d5c.json  cmakeFiles-v1-0292fe4eff373787e44c.json  cmakeFiles-v1-27395e9dda81f9f484ad.json  cmakeFiles-v1-633a86ca5146151823c8.json  codemodel-v2-077055c0ea0ea93f7027.json  codemodel-v2-34262dcdf61e65392d64.json  (+19 more)
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-5e7bdd7345905e07dd59.json  cmakeFiles-v1-f2494647e8bfe741f8ab.json  codemodel-v2-02432ca58875de2a24d2.json  codemodel-v2-40996bf9b71dfff39474.json  codemodel-v2-58781da94ec425316d09.json  codemodel-v2-7cbd20ca8d0e5fcb613e.json  codemodel-v2-d5257bd3af7447340a9d.json  index-2022-08-06T16-03-14-0602.json  index-2022-08-07T11-16-25-0092.json  index-2022-08-13T05-45-01-0643.json  index-2022-08-13T05-48-11-0158.json  index-2022-08-13T09-06-18-0527.json  index-2022-08-20T07-12-34-0403.json  target-SmartCalc_v2_0-Debug-001372462c5da310ca3a.json  target-SmartCalc_v2_0-Debug-1161729cfe93b1257a72.json  target-SmartCalc_v2_0-Debug-75d137af4e112148b9b5.json  target-SmartCalc_v2_0-Debug-836f499d2b4e53ab3397.json  target-SmartCalc_v2_0-Debug-83d2afc704aff4cecbc6.json  target-SmartCalc_v2_0-Debug-8ebb92cc3e3c6a921a34.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/SmartCalc_v2_0_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/SmartCalc_v2_0_autogen/6YEA5652QU/: moc_calculator.cpp  moc_credit.cpp  moc_debit.cpp  moc_graph.cpp  moc_qcustomplot.cpp
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/SmartCalc_v2_0_autogen/include/: ui_calculator.h  ui_credit.h  ui_debit.h
controller/calculator/: calculator.cc  calculator.h
controller/graph/: graph.cc  graph.h
form/: calculator.ui  graph.ui
include/: calculator.h  qcustomplot.h
materials/linters/: CPPLINT.cfg
model/calculation/: calculation.cc  calculation.h
model/credit/: credit.cc  credit.h
model/debit/: debit.cc  debit.h
qcustomplot/: qcustomplot.cc
source/: credit.cc  graph.cc  qcustomplot.cc
src/: CMakeLists.txt  Doxyfile  Makefile
src/doxygen/html/: annotated.html  calculation_8hpp.html  calculation_8hpp_source.html  calculator_8hpp.html  calculator_8hpp_source.html  class_q_c_p_abstract_item-members.html  class_q_c_p_abstract_item.html  class_q_c_p_abstract_legend_item-members.html  class_q_c_p_abstract_legend_item.html  class_q_c_p_abstract_paint_buffer-members.html  class_q_c_p_abstract_paint_buffer.html  class_q_c_p_abstract_plottable-members.html  class_q_c_p_abstract_plottable.html  class_q_c_p_abstract_plottable1_d-members.html  class_q_c_p_abstract_plottable1_d.html  class_q_c_p_axis-members.html  class_q_c_p_axis.html  class_q_c_p_axis_painter_private-members.html  class_q_c_p_axis_painter_private.html  class_q_c_p_axis_rect-members.html  class_q_c_p_axis_rect.html  class_q_c_p_axis_ticker-members.html  class_q_c_p_axis_ticker.html  class_q_c_p_axis_ticker_date_time-members.html  class_q_c_p_axis_ticker_date_time.html  class_q_c_p_axis_ticker_fixed-members.html  class_q_c_p_axis_ticker_fixed.html  class_q_c_p_axis_ticker_log-members.html  class_q_c_p_axis_ticker_log.html  class_q_c_p_axis_ticker_pi-members.html  class_q_c_p_axis_ticker_pi.html  class_q_c_p_axis_ticker_text-members.html  class_q_c_p_axis_ticker_text.html  class_q_c_p_axis_ticker_time-members.html  class_q_c_p_axis_ticker_time.html  class_q_c_p_bars-members.html  class_q_c_p_bars.html  class_q_c_p_bars_data-members.html  class_q_c_p_bars_data.html  class_q_c_p_bars_group-members.html  (+180 more)
src/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enums_7.js  enums_b.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+26 more)
src/doxygen/latex/: annotated.tex  calculation_8hpp.tex  calculation_8hpp_source.tex  calculator_8hpp.tex  calculator_8hpp_source.tex  class_q_c_p_abstract_item.tex  class_q_c_p_abstract_legend_item.tex  class_q_c_p_abstract_paint_buffer.tex  class_q_c_p_abstract_plottable.tex  class_q_c_p_abstract_plottable1_d.tex  class_q_c_p_axis.tex  class_q_c_p_axis_painter_private.tex  class_q_c_p_axis_rect.tex  class_q_c_p_axis_ticker.tex  class_q_c_p_axis_ticker_date_time.tex  class_q_c_p_axis_ticker_fixed.tex  class_q_c_p_axis_ticker_log.tex  class_q_c_p_axis_ticker_pi.tex  class_q_c_p_axis_ticker_text.tex  class_q_c_p_axis_ticker_time.tex  class_q_c_p_bars.tex  class_q_c_p_bars_data.tex  class_q_c_p_bars_group.tex  class_q_c_p_color_gradient.tex  class_q_c_p_color_map.tex  class_q_c_p_color_map_data.tex  class_q_c_p_color_scale.tex  class_q_c_p_color_scale_axis_rect_private.tex  class_q_c_p_curve.tex  class_q_c_p_curve_data.tex  class_q_c_p_data_container.tex  class_q_c_p_data_range.tex  class_q_c_p_data_selection.tex  class_q_c_p_error_bars.tex  class_q_c_p_error_bars_data.tex  class_q_c_p_financial.tex  class_q_c_p_financial_data.tex  class_q_c_p_graph.tex  class_q_c_p_graph_data.tex  class_q_c_p_grid.tex  (+67 more)
src/form/: calculator.ui  credit.ui  debit.ui  graph.ui
src/include/: calculation.hpp  calculator.h  calculator.hpp  credit.hpp  debit.hpp  graph.hpp
src/source/: calculation.cpp  calculator.cpp  credit.cpp  debit.cpp  graph.cpp  main.cpp
src/tests/: CMakeLists.txt  SCalc_test.cpp
test/: CMakeLists.txt  tests.cc
tests/: CMakeLists.txt  SCalc_test.cpp
(+290 files in other folders)
